SERVER-6630 mongooplog skips drop operations